[gd_scene format=3 uid="uid://diuwtmxdc2vvg"]

[ext_resource type="Script" uid="uid://c5wh3hnj7v20j" path="res://Items/Interactables/guest_needs_billboard.gd" id="1_owhe2"]
[ext_resource type="Script" uid="uid://dvs8twuyamr38" path="res://Items/Interactables/guest_needs_viewport.gd" id="2_5axrc"]

[sub_resource type="ViewportTexture" id="ViewportTexture_mf4tt"]
viewport_path = NodePath("NeedsViewport")

[node name="GuestNeedsBillboard" type="Node3D" unique_id=1027608702]
script = ExtResource("1_owhe2")

[node name="NeedsViewport" type="SubViewport" parent="." unique_id=1422336722]
transparent_bg = true
size = Vector2i(256, 128)
script = ExtResource("2_5axrc")

[node name="VBoxContainer" type="VBoxContainer" parent="NeedsViewport" unique_id=1331248180]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GuestName" type="Label" parent="NeedsViewport/VBoxContainer" unique_id=1692762072]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="SatietyBar" type="ProgressBar" parent="NeedsViewport/VBoxContainer" unique_id=36878702]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
show_percentage = false

[node name="SatietyBarLabel" type="Label" parent="NeedsViewport/VBoxContainer/SatietyBar" unique_id=699760674]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Food"
horizontal_alignment = 1

[node name="StressBar" type="ProgressBar" parent="NeedsViewport/VBoxContainer" unique_id=1224830095]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
show_percentage = false

[node name="StressBarLabel" type="Label" parent="NeedsViewport/VBoxContainer/StressBar" unique_id=970924365]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Stress"
horizontal_alignment = 1

[node name="Sprite3D" type="Sprite3D" parent="." unique_id=295489582]
flip_h = true
texture = SubResource("ViewportTexture_mf4tt")
